--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>ICTOTO : login Link Alternatif </title>
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="https://ictoto.dataklmsad902.site/images/setting-favicon/1/cm7LJrnejtJ5sI9X.png?s=d428f2f0c626b14d65c0fdb89df29701"/>
 <link rel="canonical" href="https://icnya.futurefriendlyweb.com"/>
-<link rel="amphtml" href=https://ictoto.press/icnya/"/>
+<link rel="amphtml" href=https://ictoto.press/icnya"/>
 <meta property="og:site_name" content="ICTOTO"/>
 <meta property="og:title" content="ICTOTO : login Link Alternatif "/>
 <meta property="og:url" content="https://icnya.futurefriendlyweb.com"/>
